# RedCertRPpPrior

./: .gitmodules  CMakeLists.txt  README.md
cmake/: RotPriorRPpConfig.cmake.in  RotPriorRPpConfigVersion.cmake.in  setup_installation.cmake
examples/: CMakeLists.txt  example_basic.cpp  example_certifier.cpp  example_rpp_staircase.cpp
include/: RotPrior.h  RotPriorConstraints.h  RotPriorManifold.h  RotPriorProblem.h  RotPriorTypes.h  RotPriorUtils.h
src/: RotPrior.cpp  RotPriorConstraints.cpp  RotPriorManifold.cpp  RotPriorProblem.cpp  RotPriorUtils.cpp
utils/: generatePointCloud.cpp  generatePointCloud.h
